[gd_scene load_steps=2 format=3 uid="uid://cafmovqj6108p"]

[ext_resource type="Script" path="res://main.gd" id="1_se5pq"]

[node name="Main" type="Node2D"]
script = ExtResource("1_se5pq")

[node name="Host" type="Button" parent="."]
custom_minimum_size = Vector2(74, 44)
offset_left = 23.0
offset_top = 13.0
offset_right = 67.0
offset_bottom = 44.0
text = "Host
"

[node name="Join" type="Button" parent="."]
custom_minimum_size = Vector2(74, 44)
offset_left = 121.0
offset_top = 13.0
offset_right = 195.0
offset_bottom = 57.0
text = "Join"

[node name="Create_Player" type="Button" parent="."]
custom_minimum_size = Vector2(74, 44)
offset_left = 23.0
offset_top = 76.0
offset_right = 138.0
offset_bottom = 120.0
text = "Create_Player"

[node name="Delete_Player" type="Button" parent="."]
custom_minimum_size = Vector2(74, 44)
offset_left = 156.0
offset_top = 76.0
offset_right = 267.0
offset_bottom = 120.0
text = "Delete Player"

[connection signal="pressed" from="Host" to="." method="host_server"]
[connection signal="pressed" from="Join" to="." method="join_server"]
[connection signal="pressed" from="Create_Player" to="." method="_on_create_player_pressed"]
[connection signal="pressed" from="Delete_Player" to="." method="_on_delete_player_pressed"]
